classDiagram
  class User {
    user_id,
    username,
    password_is_temporary,
    employer_id,
    password,
    role
  }
  class Merchant {
    stores
    employees  
  }
  class Employee {
 
  }
  class Store {
    store_id,
    name,
    owner_id
  }
  class Department {
    department_id,
    store_id,
    name,
    check_days_before
  }
  class Shelf {
    shelf_id,
    department_id,
    name,
    is_default
  }
  Merchant --|> User
  Employee --|> User
  Merchant "1" -- "*" Store
  Merchant "1" -- "*" Employee
  Store "1" -- "*" Department
  Department "1" -- "1..*" Shelf
  Employee ..> Store : Permission
